up rss svr